# ormosia

./: CMakeLists.txt  README.md  a.ormo  main.cpp  run.bat
include/: AST.hpp  Interpreter.hpp  Lexer.hpp  ORMO.hpp  Parser.hpp  printf1.hpp
src/: AST.cpp  CMakeLists.txt  Lexer.cpp  Parser.cpp  printf1.cpp
src/compiler/: compiler.cpp
src/include/: AST.hpp  Lexer.hpp  OVM_code.hpp  OpCodeBuffer.hpp  Parser.hpp
src/parser/: CMakeLists.txt  Lexer.cpp  Parser.cpp
src/runtime/: CMakeLists.txt  OVM.cpp
test/: CMakeLists.txt  Test.oo  Test.ormo  test.cpp
